[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roblox-asset-downloader"
version = "0.1.0"
description = "Roblox Asset Downloader"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Flask>=2.0.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=0.19.0",
    "requests>=2.26.0",
    "Werkzeug>=2.0.0",
    "certifi>=2021.10.8"
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
